# mcpd3

./: CMakeLists.txt  LICENSE  README.md
benchmark/: native_monolith.cpp
cmake/: FindMETIS.cmake
decomp/: constraint.h  dualdecomp.h  lower_bound_certificate.h  partition_coordinator.h  partition_worker.h  subsolver.h
example/: dimacs.cpp  dimacs_dual_decomp.cpp  simple.cpp
graph/: csrgraph.h  cycle.h  dimacs.h  mcgraph.h  partition.h
io/: memory.h  mmaparray.h  workdir.h
maxflow/: block.h  graph.cpp  graph.h  instances.inc  maxflow.cpp
measure/: timer.h
multithread/: threadpool.h
primaldual/: mcpd3.h
tests/: partition_worker_test.cpp
